tests/ui/bad-date.rs
#[rustversion::nightly(stable)]
struct S;

fn main() {}
